Fix alignment of warning icon

--- a/app/components/primer/alpha/toggle_switch.pcss
+++ b/app/components/primer/alpha/toggle_switch.pcss
@@ -210,7 +210,7 @@
 
 .ToggleSwitch-statusIcon {
   width: 16px;
-  height: 16px;
+  display: flex;
 }
 
 .ToggleSwitch--small {
